<resources>
    <string name="app_name">Exercise_5</string>
    <string name="playerOne">Player One</string>
    <string name="playerTwo">Player Two</string>
    <string name="playerOneScore">Player One Score</string>
    <string name="playerTwoScore">Player Two Score</string>
    <string name="throwDice">Throw Dices</string>
    <string name="refresh">Refresh</string>
    <string name="defaultValue">0</string>
</resources>